This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Core dumps on the Solaris buildbot
Type: crash Stage: resolved
Components: Tests Versions: Python 3.1
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, loewis, pitrou
Priority: release blocker Keywords: patch

Created on 2009-03-05 23:53 by pitrou, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
textio_unaligned_access.patch pitrou, 2009-03-06 16:46
Messages (7)
msg83227 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-03-05 23:53
It has been happening for a few days now... may be related to the IO-C
merge.
http://www.python.org/dev/buildbot/3.x.stable/
msg83248 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2009-03-06 16:08
Indeed, it crashes in

TextIOWrapper_parseCookie(cookie=0xffbfb278, cookieObj=0x27e780)
_textio.c:1739
1739        cookie->start_pos     = * (Py_off_t *)(buffer + OFF_START_POS);

with a call stack of

#0  0x001426bc in TextIOWrapper_parseCookie (cookie=0xffbfb278,
    cookieObj=0x27e780) at _textio.c:1739
#1  0x001431f4 in TextIOWrapper_seek (self=0x545e38, args=0x70ce00)
    at _textio.c:1890
#2  0x001cef10 in PyCFunction_Call (func=0x715238, arg=0x70ce00, kw=0x0)
    at Objects/methodobject.c:81
...

The problem is that OFF_START_POS is 13, so the entire line produces an
unaligned access.
msg83249 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-03-06 16:33
Thanks for the debugging! I'll try to produce a patch before tomorrow's
alpha release.
msg83250 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-03-06 16:46
Here is a patch. Martin, can you test it or should I commit directly?
msg83255 - (view) Author: Martin v. Löwis (loewis) * (Python committer) Date: 2009-03-06 21:43
I have tested it; test_cgi now passes.
msg83256 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-03-06 21:50
Committed in r70205, let's see what the buildbot says.
msg83257 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2009-03-06 22:47
The usual Solaris test failures happened :-(, but nothing related with io-c.
History
Date User Action Args
2022-04-11 14:56:46adminsetgithub: 49679
2009-03-06 22:47:35pitrousetstatus: pending -> closed
resolution: fixed
messages: + msg83257
2009-03-06 21:50:17pitrousetstatus: open -> pending
messages: + msg83256
stage: resolved
2009-03-06 21:43:45loewissetmessages: + msg83255
2009-03-06 21:25:15benjamin.petersonsetpriority: high -> release blocker
2009-03-06 16:46:51pitrousetfiles: + textio_unaligned_access.patch
keywords: + patch
messages: + msg83250
2009-03-06 16:33:16pitrousetmessages: + msg83249
2009-03-06 16:08:09loewissetnosy: + loewis
messages: + msg83248
2009-03-05 23:53:12pitroucreate