Issue #5429: unaligned access in TextIOWrapper cookie parsing (segfaults on SPARC CPUs, and possibly others)